default.css: - set z-index 101 for submenus to ensure quota usage bars don't hide them
git-svn-id: https://svn.code.sf.net/p/postfixadmin/code/trunk@1836 a1433add-5e2c-0410-b055-b7f2511e0802

--- a/css/default.css
+++ b/css/default.css
@@ -170,6 +170,7 @@ ul.flash-error {
 	color: #999999;
 	border:2px solid white;
 	border-top:none;
+	z-index:101;
 }
 
 #menu li:hover ul, #menu li.sfhover ul, #tabbar li:hover ul, #tabbar li.sfhover ul {
